# chess-advanced-cpp

./: .gitignore  CMakeLists.txt  README.md
include/: Board.h  GUI.h  Game.h  Piece.h  Renderer.h  common.h
src/: Board.cpp  GUI.cpp  Game.cpp  Piece.cpp  Renderer.cpp  common.cpp  main.cpp  main_gui.cpp
